# pyGrokAPI

./: LINCENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
api/: GrokAI.py
pygrokai/: __init__.py
test/: .gitignore  test.py
